exclusive gateway implemented pass